[package]
name = "libsqlite3-sys"
version = "0.999.385"
edition = "2021"
repository = "https://github.com/videogame-hacker/alt-libsqlite3-sys-rs"
description = "Alternate native bindings to a bundled libsqlite3 library"
license-file = "LICENSE.md"
links = "rusqlite"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.73"
pkg-config = "0.3.25"
vcpkg = "0.2.15"
